# icai_crl_description

./: CMakeLists.txt  README.md  package.xml
models/environments/control_lab/: control_lab.sdf  model.config
models/environments/control_lab/meshes/: Lab_drones_sin_pistas_V2.mtl
models/environments/control_lab_lite/: control_lab_lite.sdf  model.config
models/environments/ramp_circuit/: model.config  ramp_circuit.sdf
models/environments/ramp_circuit/meshes/: Pista_v04.mtl
models/robots/kitt/: kitt.sdf  model.config
models/robots/kitt/meshes/: Rueda100mm.STL  SoporteSensores.STL
models/robots/kitt_nav/: kitt_nav.sdf  model.config
models/robots/kitt_segway/: kitt_segway.sdf  model.config
