<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>icai_crl_description</name>
  <version>0.0.0</version>
  <description>Description files of ICAI Control and Robotics Laboratory resources</description>
  <maintainer email="dcubillo@comillas.edu">Diego Cubillo</maintainer>
  <license>Apache 2.0</license>
  <author>Diego Cubillo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>